# LabHacks

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/html/: .buildinfo  1_Sphinx.html  1_intro.html  2_fMRI.html  2_okr.html  3_VFM.html  3_results.html  4_tutorials.html  5_refs.html  References.html  genindex.html  index.html  modules.html  myCodeIsYourCode.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/myCodeIsYourCode/: load_tfr_rdm.html  plot_tfr_rdm.html
docs/html/_sources/: 1_Sphinx.md.txt  1_intro.md.txt  2_fMRI.md.txt  3_VFM.md.txt  3_results.md.txt  4_tutorials.md.txt  References.md.txt  index.rst.txt  modules.rst.txt
docs/html/_static/: alabaster.css
docs_local/source/: 1_Sphinx.md  1_intro.md  2_fMRI.md  2_okr.md  3_VFM.md  3_results.md  4_tutorials.md  5_refs.md  conf.py  index.rst  myCodeIsYourCode.rst  references.bib
myCodeIsYourCode/: load_tfr_rdm.py  plot_tfr_rdm.py
