[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myCodeIsYourCode"
version = "0.0.0"  # You can specify the version here
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["."]

